--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   },
   "homepage": "https://github.com/jberks02/React-Typescript#readme",
   "dependencies": {
+    "chart.js": "^4.4.0",
     "concurrently": "^7.0.0",
-    "kea": "^2.5.8",
+    "kea": "^3.1.5",
     "node-fetch": "^3.2.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.6",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.23.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -59,7 +62,7 @@
     "css-loader": "^6.7.0",
     "eslint": "^8.10.0",
     "jest": "^27.5.1",
-    "kea-typegen": "^1.4.2",
+    "kea-typegen": "^3.3.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2",
